# ChessRepo

./: CMakeLists.txt  resources.qrc
include/: ChessCanvas.h  ChessDisplay.h  MainWindow.h  Test.h
qml/: ChessBoard.qml  MainWindow.qml
src/: ChessCanvas.cpp  ChessDisplay.cpp  MainWindow.cpp  Test.cpp  main.cpp  mainwindow.cpp  mainwindow.h
src/app/: app.cpp  app.h  application.cpp  application.h  models.h  router.cpp  router.h  session.cpp
src/controllers/: CMakeLists.txt  Controller.cpp  Controller.h  board_controller.cpp  board_controller.h  boardcontroller.cpp  boardcontroller.h  contentcontroller.h  edit_controller.cpp  edit_controller.h  explorer_controller.cpp  explorer_controller.h  explorercontroller.cpp  explorercontroller.h  opening_controller.h  openingcontroller.cpp  openingcontroller.h  repertoire_controller.cpp  repertoire_controller.h  repertoire_list_controller.cpp  repertoire_list_controller.h  repertoire_viewer_controller.cpp  repertoire_viewer_controller.h  squarecontroller.cpp  squarecontroller.h
src/domain/: CMakeLists.txt
src/domain/chess/: board.cpp  board.h  piece.cpp  piece.h  primitives.h
src/domain/explorer/: iexplorer_service.cpp  iexplorer_service.h
src/domain/repertoire/: repertoire.cpp  repertoire.h
src/domain/types/: collections.cpp  collections.h  fen.cpp  fen.h  stats.cpp  stats.h  uci_move.cpp  uci_move.h  value_objects.h
src/domain/types/position/: position_aggregate.h  position_graph.cpp  position_graph.h  position_key.cpp  position_key.h  position_record.h  position_stats.h
src/infrastructure/: CMakeLists.txt
src/infrastructure/explorer/: lichess_explorer_parser.cpp  lichess_explorer_parser.h  lichess_explorer_service.cpp  lichess_explorer_service.h  lichess_request_builder.cpp  lichess_request_builder.h  lichess_service.cpp  lichess_service.h
src/infrastructure/persistence/: QJson_parser.cpp  QJson_parser.h  qt_serialization.cpp  qt_serialization.h  repertoire_persistence.cpp  repertoire_persistence.h  repertoire_service.cpp  repertoire_service.h
src/models/: board_model.cpp  board_model.h  boardmodel.cpp  boardmodel.h  boardtblmodel.cpp  boardtblmodel.h  boardtblproxymodel.cpp  boardwrapper.cpp  boardwrapper.h  chess_board.cpp  chess_board.h  datatypes.h  explorer.cpp  explorer.h  explorer_tblmodel.cpp  explorer_tblmodel.h  explorertblmodel.cpp  explorertblmodel.h  moveModel.cpp  moveModel.h  openingbook.cpp  openingbook.h  openingrepertoiremodel.cpp  openingrepertoiremodel.h  squaremodel.h  table_model.cpp  table_model.h  tablemodel.cpp  tablemodel.h
src/presentation/: CMakeLists.txt  uitls.h  utils.h
src/presentation/models/: explorer_tblmodel.cpp  explorer_tblmodel.h  tablemodel.cpp  tablemodel.h
src/presentation/models/chessboard/: board_proxytblmodel.cpp  board_proxytblmodel.h  board_tblmodel.cpp  board_tblmodel.h  board_wrapper.h
src/presentation/viewmodels/: board_table_viewmodel.cpp  board_table_viewmodel.h  board_viewmodel.cpp  board_viewmodel.h  explorer_viewmodel.cpp  explorer_viewmodel.h  repertoire_selection_viewmodel.cpp  repertoire_selection_viewmodel.h  repertoire_viewmodel.cpp  repertoire_viewmodel.h
src/services/: LichessService.cpp  LichessService.h  OpeningService.cpp  OpeningService.h  explorer_api_service.cpp  explorer_api_service.h  repertoire_navigator.cpp  repertoire_navigator.h  repertoire_repository.cpp  repertoire_repository.h  repertoire_service.cpp  repertoire_service.h  session.cpp  session.h
src/ui/: CMakeLists.txt
src/ui/components/: createrepomodal.cpp  createrepomodal.h  move_card.cpp  move_card.h  repertoire_tree.cpp  repertoire_tree.h
src/ui/components/chessboard/: arrowoverlay.cpp  arrowoverlay.h  board_graphics_scene.cpp  board_graphics_scene.h  board_graphics_view.cpp  board_graphics_view.h  board_tblview.cpp  board_tblview.h  board_view.cpp  board_view.h  piece_graphics_item.cpp  piece_graphics_item.h  square_delegate.cpp  square_delegate.h  square_graphics_item.cpp  square_graphics_item.h
src/ui/components/common/: card_widget.cpp  card_widget.h  list_widget.cpp  list_widget.h  stats_painter.cpp  stats_painter.h
src/ui/components/explorer/: explorer_tblview.cpp  explorer_tblview.h  explorer_view.cpp  explorer_view.h  winrate_delegate.cpp  winrate_delegate.h
src/ui/components/mainwindow/: menu_bar.h
src/ui/components/repertoire/: move_card.cpp  move_card.h  moves_deck.cpp  moves_deck.h
src/ui/components/repertoire_viewer/: rep_move_card.cpp  rep_move_card.h  repertoire_view.cpp  repertoire_view.h
src/ui/compound_widgets/: chessboard_table.cpp  chessboard_table.h  explorer_table.cpp  explorer_table.h  repertoire_manager_widget.cpp  repertoire_manager_widget.h  repertoire_selection_widget.cpp  repertoire_selection_widget.h
src/ui/pages/: page.cpp  page.h
src/ui/pages/edit/: edit_page.cpp  edit_page.h  moves_deck.cpp  moves_deck.h
src/ui/pages/list/: list_page.cpp  list_page.h  repocard.cpp  repocard.h  repotoirelist_page.cpp  repotoirelist_page.h
src/utils/: chess.h  utils.h
src/views/: BuildRepoFrame.h  ExplorerMovesTableView.h  arrowoverlay.cpp  arrowoverlay.h  board_view.cpp  board_view.h  boardtblview.cpp  boardtblview.h  boardview.cpp  boardview.h  explorertblview.cpp  explorertblview.h  explorerview.cpp  infoframe.cpp  infoframe.h  mainwindow.cpp  mainwindow.h  squaredelegate.cpp  squaredelegate.h  (+2 more)
tests/: CMakeLists.txt  test_utils.cpp  test_utils.h
tests/unit/: test_proxy_board_model.cpp  test_proxy_board_model.h  test_repertoire_persistence.cpp  test_repertoire_persistence.h  test_resources.cpp  test_resources.h
tests/unit/domain/: test_square_primitive.cpp  test_square_primitive.h
tests/unit/presentation/: test_repertoire_selection_viewmodel.cpp  test_repertoire_selection_viewmodel.h  test_repertoire_viewmodel.cpp  test_repertoire_viewmodel.h
tests/unit/ui/: test_board_viewmodel.cpp  test_board_viewmodel.h  test_board_widget.cpp  test_board_widget.h  test_moves_deck_widget.cpp  test_moves_deck_widget.h  test_repertoire_persistence_widget.cpp  test_repertoire_persistence_widget.h  test_repertoire_selection_widget.cpp
(+43 files in other folders)
